--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ img{max-width: 100%;height: auto;border: 0;}
 .thumbnail img{border-radius: 8px;}
 .thumbnail .icon-txt{justify-content: left;align-items: initial; padding: 20px 0 0 0;align-items: flex-start;}
 .thumbnail .icon-txt .thumb-icon { vertical-align: top;min-width: 52px;box-sizing: border-box;}
-.thumbTxt {margin: 0 auto;}
+.thumbTxt {margin: 0;}
 .thumbTxt .thumbNam {margin: 0 auto; font-style: normal;  font-weight: 400; font-size: 14px;line-height: normal; color: #FFFFFF;margin-bottom: 12px;}
 .thumbTxt .thumbsmltxt{max-width: 250px; font-weight: 600; font-size: 18px; line-height: 25px;letter-spacing: -0.03em;color: #FFFFFF;min-height: 50px;}
 .ldtvinsights{background-color: #111111;padding: 48px 0;}
@@ -414,9 +414,9 @@ img{max-width: 100%;height: auto;border: 0;}
 	.first-part .watch-txt {font-size: 14px	}
 	.first-part .Fbcreator {font-size: 36px;line-height: 42px;}
 	.Ytsld{flex-direction: row;}
-	 .slid{ flex-direction: row; }
-	 .thumbnail .icon-txt {	flex-direction: row;}
-	 .Ytsld .thumbnail {position: relative;margin-right: 14px;flex: none;}
+	.slid{ flex-direction: row; }
+	.thumbnail .icon-txt {	flex-direction: row;}
+	.Ytsld .thumbnail {position: relative;margin-right: 14px;flex: none;}
 	.ldtvinsigh .second-part .ldtv-txt {font-size: 16px;padding-left: 0;text-align: center;padding: 0 20px;line-height: 22px;}
 	.Social {margin-bottom: 16px;}
   /* .web-category .Categories {padding: 10px 0 0 0; margin-bottom: 60px; overflow-x: auto;}
@@ -427,6 +427,7 @@ img{max-width: 100%;height: auto;border: 0;}
     margin-bottom: 60px;
     overflow-x: auto;
 }
+.popup-content {padding: 7px;width: 88%;margin-top: 40px;margin-top: -180px; top: 50%;}
 
 }
 @media screen and (max-width: 768px){
@@ -435,23 +436,24 @@ img{max-width: 100%;height: auto;border: 0;}
 	/* .second-part {border-left: 1px solid rgb(217 217 217 / 80%);} */
 }
 @media screen and (max-width: 767px){
-  .card {width:100%;}
+  .card {width:100%;height: 223px;}
 	.w-50 {width: 100%;}
 	.first-part .watch-txt {font-size: 14px;}
 	.di-flex {flex-direction: column;}
 	.Ytsld{flex-direction: row;}
-	 .slid{ flex-direction: row; }
-   .web-category .Ytsld .slid{ flex-direction: column; }
-   .web-category .Ytsld .slid{overflow-x:inherit;}
-	 .thumbnail .icon-txt {	flex-direction: row;}
-	 .first-part {text-align: center;}
-	 .Ytsld .thumbnail {position: relative;margin-right: 0;flex: none;max-width: 100%;width: 100%;}
+	.slid{ flex-direction: row; }
+  .web-category .Ytsld .slid{ flex-direction: column; }
+  .web-category .Ytsld .slid{overflow-x:inherit;}
+	.thumbnail .icon-txt {	flex-direction: row;}
+	.first-part {text-align: center;}
+	.Ytsld .thumbnail {position: relative;margin-right: 10px;flex: none;max-width: 100%;width: 100%;}
+  .web-category .Ytsld .thumbnail {margin-right: 0;}
 	.ldtvinsigh .second-part .ldtv-txt {font-size: 16px;padding-left: 0;text-align: center;padding: 0 20px;line-height: 22px;margin: 0 auto;}
 	.first-part .Fbcreator {font-size: 32px;line-height: 41px;text-align: center;}
 	.second-part {border-left: none;}
 	.Categories .di-flex {flex-direction: row;}
   .web-category .Categories {padding: 10px 0 0 0;margin-bottom: 60px; overflow-x: auto;}
-.web-category .Categories .di-flex {flex-wrap: inherit;justify-content: inherit;}
+  .web-category .Categories .di-flex {flex-wrap: inherit;justify-content: inherit;}
 	.di-flex.fs {	flex-direction: row;}
 	.thindustry .btm-img {display: block;text-align: center;padding: 27px 0;}
 	.thindustry {position: relative;}
@@ -466,15 +468,12 @@ img{max-width: 100%;height: auto;border: 0;}
   .Social {margin-bottom: 74px;}
   .vieo-sec {padding: 10px 0;}
   .Ytsld .thumbnail { align-self: auto;}
-
-
-
-
+  .insta-first .insta-heding {font-size: 26px;line-height: 36px;}
+  .popup-content {padding: 7px;width: 88%;margin-top: 40px;margin-top: -180px; top: 50%;}
+  .clsbtn {right: -18px; top: -25px;}
+  .second {padding: 40px 0 0 0;}
+  .load-more {position: relative;top: -33px;}
 }
-
-
-
-
 
 @media screen and (max-width: 753px){
 	.thindustry .btm-img {top: 244px;}
