--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@ a{
 .w-33{
     width: 33%;
 }
+.w-60{ width: 60%;}
+.w-40{ width: 40%;}
 .w-25{width: 50%;}
 img{max-width: 100%;height: auto;border: 0;}
 .social-media{background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.3) 0%, #000000 100%), url(../img/banner.png);  background-attachment: scroll;background-repeat: no-repeat; background-position: center top; background-size:cover;overflow: hidden;}
@@ -390,6 +392,127 @@ img{max-width: 100%;height: auto;border: 0;}
    button{text-align: center; cursor: pointer;padding: 16px;width: 140px;height: 51px;}
   .load-more{font-weight: 500;font-size: 16px;line-height: 19px; display: flex; align-items: center;letter-spacing: -0.01em;color: #888891;border: 1px solid #888891;background: #000000;border-radius: 40px;margin: 0 auto;}
   .second{padding: 40px 0;}
+
+/* survey start */
+
+.surveymain{background: #FFFFFF;}
+.survey{margin-bottom: 48px;}
+.survey-heading{font-weight: 700;font-size: 48px;line-height: 150%;color: #202025; margin: 0 auto; margin-bottom: 24px;}
+.survey .recentsrv{position: relative;}
+.srvsecnd{ position: absolute;right: 75px;background: #FFFFFF;box-shadow: 0px 20px 108px rgba(0, 0, 0, 0.08);border-radius: 8px; padding: 30px;top: 22%;}
+.srvsecnd .promotional-wht .promotional-heading{font-size: 32px;line-height:42px;letter-spacing: -0.01em;color: #202025;margin: 0 auto;}
+.srvsecnd .promotional-wht .promotional-txt{font-size: 16px; line-height: 24px; letter-spacing: -0.01em;color: #202025;}
+.srvsecnd .promotional-wht .date{margin-bottom: 70px;}
+.srvsecnd .promotional-wht .date p{font-weight: 500;font-size: 16px; line-height: 22px;color: #888891;}
+.viewreport{font-weight: 600;font-size: 16px;line-height: 16px;letter-spacing: 0.06em;text-transform: uppercase;color: #007BB6;}
+.surveybox{padding: 40px 0;    }
+.surveybox .srvbox{max-width: 416px;height: auto;margin-right: 14px;}
+.surveybox .srvbox .srv-txt{font-weight: 600;font-size: 24px;line-height: 34px;letter-spacing: -0.01em;color: #202025;max-width: 369px;margin: 0;padding: 10px 0;min-height: 87px; }
+.surveybox .srvbox .date p { font-weight: 500; font-size: 16px; line-height: 22px; color: #888891; margin: 0 auto;}
+/* .srv {position: relative; display: block;}
+ .overrelay{position: absolute;    top: 50%;right: 30%; }
+.srv :hover {  transform: translateX(0); background-color: red;} */
+.Ready{margin-bottom: 40px;}
+.rady{background-image: url(../img/ready-banner-1.png);  background-attachment: scroll;background-repeat: no-repeat;background-position: left top; background-size:contain;overflow: hidden;background-color: #202025;;}
+.readyfst{padding: 56px 40px;}
+.readyfst .ready-txt{font-weight: 700;font-size: 32px;line-height: 120%;margin: 0 auto;letter-spacing: -0.01em;color: #F2F2F3;}
+.readysecnd {padding-left: 273px;}
+.takebtn{align-items: center;padding: 24px;gap: 8px;border:0; max-width: 278px;width: 100%;  height: 64px;  background: #007BB6;border-radius: 8px;color: #FFFFFF;font-size: 16px;line-height: 16px;}
+.doyoutnk{}
+.doyousec .doyoufst{background: #034EA2;border-radius: 8px;}
+.doyoufst .top-sec{}
+.top-sec{background: #303035;
+  border-radius: 8px 8px 0px 0px; padding: 0 36px;}
+  .top-txt{padding-left: 12px;font-weight: 500; font-size: 16px;line-height: 19px; letter-spacing: -0.01em;color: #F2F2F3;}
+.doyousec .doyousnd{padding-left: 20px;}
+.doyousec .doyousnd-txt{font-weight: 600;font-size: 24px;line-height: 140%;letter-spacing: -0.01em;color: #202025;margin: 0 auto;}
+.doyousec .date{font-weight: 500; font-size: 16px; line-height: 24px;color: #888891;}
+.top-snd {font-weight: 500;font-size: 16px;line-height: 19px;letter-spacing: -0.01em;color: #F2F2F3;}
+.btm-sec {padding: 0 36px;}
+.btm-sec .doyou-txt{font-weight: 700;font-size: 32px;line-height: 48px;letter-spacing: -0.01em; color: #F2F2F3;    margin: 0 auto;    padding: 30px 0 11px 0;}
+.rd-btn{    justify-content: flex-start; margin-bottom: 30px;}
+.rd-btn .radiobtn{border: 1px solid #F2F2F3;padding: 16px;margin-right: 10px;}
+.rd-btn .radiobtn label{font-weight: 500;font-size: 16px;line-height: 24px;color: #F2F2F3;vertical-align: middle;}
+input[type="radio" ] {width: 22px;height: 22px;vertical-align: middle;}
+.submit{align-items: center; padding: 24px;gap: 8px;width: 170px;height: 64px;background: #F15A22;border-radius: 8px;color: #FFFFFF;font-size: 16px;line-height: 100%;letter-spacing: 0.06em; text-transform: uppercase;  border:none;margin: 0 auto;}
+.btm-sec .date p{font-weight: 500;font-size: 16px;line-height:22px;color: #BDBDC2;}
+.srv {padding: 20px 0 0 0;margin-bottom: 12px;}
+.box{
+  font-family: 'Signika', sans-serif;
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+}
+.view-report{font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background: rgba(32, 32, 37, 0.9);
+  width: 168px;
+height: 64px;
+border: 1px solid #FFFFFF;
+border-radius: 8px;
+
+  }
+.box:before,
+.box:after{
+    content: "";
+    background: rgba(32, 32, 37, 0.9);
+    width: 0;
+    height: 0;
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 0.4s ease-in-out;
+}
+.box:after{
+    top: auto;
+    left: auto;
+    right: 0;
+    bottom: 0;
+}
+.box:hover:before,
+.box:hover:after{
+    width: 100%;
+    height: 100%;
+}
+.box img{
+    max-width: 100%;
+    height: auto;
+}
+.box .box-content{
+    color: #fff;
+    width: 85%;
+    opacity: 0;
+    transform: translateX(-50%) translateY(-50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 2;
+    transition: all 0.6s ease;
+}
+.box:hover .box-content{ opacity: 0.9; }
+
+
+
+
+
+
+
+/* survey end */
+
+
+
+
+
+
+
+
+
+
+
 /*Medai query*/
 @media screen and (max-width: 1298px) {
 	.container{max-width: 100%;padding: 0 20px;}
@@ -406,6 +529,7 @@ img{max-width: 100%;height: auto;border: 0;}
 	.thindustry .industry .industry-first .indtxt {font-size: 24px;line-height: 32px;}
 	.thindustry .industry .industry-first .indbtmtxt {font-size: 16px;line-height: 16px;margin-bottom: 80px;}
 	.slider .thumbnail .sub-txt {padding: 4px;margin: 0 auto;font-size: 12px;top: 3px;right: 4px;}
+ 
 }
 
 @media screen and (max-width: 907px){
@@ -420,12 +544,9 @@ img{max-width: 100%;height: auto;border: 0;}
   /* .web-category .Categories {padding: 10px 0 0 0; margin-bottom: 60px; overflow-x: auto;}
 .web-category .Ytsld .slid{ flex-direction: column; }
    .web-category .Ytsld .slid{overflow-x:inherit;} */
-   .web-category .Categories {
-    padding: 10px 0 0 0;
-    margin-bottom: 60px;
-    overflow-x: auto;
-}
-.popup-content {padding: 7px;width: 88%;margin-top: 40px;margin-top: -180px; top: 50%;}
+   .web-category .Categories { padding: 10px 0 0 0;margin-bottom: 60px;overflow-x: auto;}
+  .w-33 {width: 100%;}
+  .popup-content {padding: 7px;width: 88%;margin-top: 40px;margin-top: -180px; top: 50%;}
 
 }
 @media screen and (max-width: 768px){
@@ -434,6 +555,8 @@ img{max-width: 100%;height: auto;border: 0;}
 	/* .second-part {border-left: 1px solid rgb(217 217 217 / 80%);} */
 }
 @media screen and (max-width: 767px){
+  .w-60{ width: 100%;}
+.w-40{ width: 100%;}
   .card {width:100%;height: 223px;}
 	.w-50 {width: 100%;}
 	.first-part .watch-txt {font-size: 14px;}
@@ -471,6 +594,31 @@ img{max-width: 100%;height: auto;border: 0;}
   .clsbtn {right: -18px; top: -25px;}
   .second {padding: 40px 0 0 0;}
   .load-more {position: relative;top: -33px;}
+  .rd-btn {justify-content: flex-start;margin-bottom: 10px;flex-direction: column;    align-items: baseline;}
+.di-flex .top-sec{margin-bottom: 16px;flex-direction: row;}
+.di-flex .top-img{flex-direction: row;}
+.di-flex .top-sec{flex-direction: row;}
+.srvsecnd {position: initial;padding: 36px 16px;}
+.srvsecnd .promotional-wht .promotional-heading {font-size: 24px;line-height: 32px;}
+.surveybox .srvbox {max-width: 416px;height: auto;margin-right: 0;margin-bottom: 20px;}
+.readysecnd {padding-left: 16px;    margin-bottom: 20px;}
+.readyfst .ready-txt {line-height: 38px;}
+.rady { background-size: auto;}
+.readyfst {padding: 28px 26px;}
+.rd-btn .radiobtn {border: 1px solid #F2F2F3;padding: 16px; margin-right: 0; margin-bottom: 26px;}
+.survey-heading { font-size: 32px; line-height: 48px;}
+.btm-sec .doyou-txt {font-weight: 700;font-size: 24px;line-height: 34px;padding: 0px 0 11px 0;}
+.btm-sec {padding: 0 22px;}
+.top-sec {padding: 0 22px;}
+.surveybox {padding: 0px 0;}
+.survey {margin-bottom: 20px;}
+
+
+
+
+
+
+
 }
 
 @media screen and (max-width: 753px){
