--- a/css/style.css
+++ b/css/style.css
@@ -106,22 +106,22 @@ img{max-width: 100%;height: auto;border: 0;}
 .card:after{content:"";width:100%;height:100%;position:absolute;top:var(--y);left:var(--x);transform:translate(-50%,-50%);opacity:0;background:radial-gradient(circle closest-side,rgba(255,255,255,.3),transparent);transition:opacity .5s ease-out}
 .card:hover:after,.card:hover .card-play{opacity:1}
 .clsbtn {	margin: 0;	border: 0;	padding: 0;	background: #000;	border-radius: 50%;	width: 34px; height: 34px; display: flex; flex-flow: column nowrap; justify-content: center; align-items: center; cursor: pointer; transition: all 150ms; position: absolute; right: -14px; top: -14px; line-height: 100%; }
-  .clsbtn .icon-cross {	margin: 0;	padding: 0;	border: 0;	background: none; position: relative;width: 22px; height: 22px;}
-  .clsbtn .icon-cross:before, .clsbtn .icon-cross:after { content: ""; position: absolute; top: 10px; left: 0; right: 0px; height: 4px; background: #fff; border-radius: 6px;}
-  .clsbtn .icon-cross:before {transform: rotate(45deg);}
-  .clsbtn .icon-cross:after { transform: rotate(-45deg);}
-  .clsbtn .icon-cross span {display: block; }
-  .clsbtn:hover, .clsbtn:focus {transform: rotateZ(90deg);background: #000; } 
-  .cross-stand-alone {	margin: 0;	padding: 0;	border: 0;	background: none;	position: relative;	width: 40px;	height: 40px;  }
-  .cross-stand-alone:before, .cross-stand-alone:after {	content: "";	position: absolute;	top: 18px;	left: 0;	right: 0;	height: 4px;	background: #000;	border-radius: 4px;}
-  .cross-stand-alone:before {	transform: rotate(45deg); }
-  .cross-stand-alone:after {transform: rotate(-45deg); }
-  .cross-stand-alone span {display: block; } 
-  .visually-hidden {	position: absolute !important;	clip: rect(1px, 1px, 1px, 1px);	padding: 0 !important;	border: 0 !important;	height: 1px !important;	width: 1px !important;	overflow: hidden;  }
+.clsbtn .icon-cross {	margin: 0;	padding: 0;	border: 0;	background: none; position: relative;width: 22px; height: 22px;}
+.clsbtn .icon-cross:before, .clsbtn .icon-cross:after { content: ""; position: absolute; top: 10px; left: 0; right: 0px; height: 4px; background: #fff; border-radius: 6px;}
+.clsbtn .icon-cross:before {transform: rotate(45deg);}
+.clsbtn .icon-cross:after { transform: rotate(-45deg);}
+.clsbtn .icon-cross span {display: block; }
+.clsbtn:hover, .clsbtn:focus {transform: rotateZ(90deg);background: #000; } 
+.cross-stand-alone {	margin: 0;	padding: 0;	border: 0;	background: none;	position: relative;	width: 40px;	height: 40px;  }
+.cross-stand-alone:before, .cross-stand-alone:after {	content: "";	position: absolute;	top: 18px;	left: 0;	right: 0;	height: 4px;	background: #000;	border-radius: 4px;}
+.cross-stand-alone:before {	transform: rotate(45deg); }
+.cross-stand-alone:after {transform: rotate(-45deg); }
+.cross-stand-alone span {display: block; } 
+.visually-hidden {	position: absolute !important;	clip: rect(1px, 1px, 1px, 1px);	padding: 0 !important;	border: 0 !important;	height: 1px !important;	width: 1px !important;	overflow: hidden;  }
 
   /* use for play icon */
-  .btnbg {	width: 68px;	height:68px;	position: relative;	border-radius: 50%;	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);	background: #007bb6;  display: inline-block;  } 
-  .btnbg:active {	transform: scale(0.9);  }
+.btnbg {	width: 68px;	height:68px;	position: relative;	border-radius: 50%;	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);	background: #007bb6;  display: inline-block;  } 
+.btnbg:active {	transform: scale(0.9);  }
 .play {  width: 100%;  height: 100%;  cursor: pointer; position: absolute;}
 .line { position: absolute; width:4px; height: 50%; background: #ffffff;  /* border-radius: 5px; */  transition: all 400ms cubic-bezier(0.8, 0, 0.33, 1);}
 .play .line { margin: 25% 0;}
@@ -235,8 +235,24 @@ li { margin: 0; padding: 0;}
 .career-detail .job-des ul li {  font-size: 16px;  color:#202025; font-weight: 400; letter-spacing: -0.01em;}
 .career-detail .btn-apply { display: block; background-color: #007BB6; font-size: 16px; line-height: 16px; padding: 24px; color: #fff; letter-spacing: 0.06em; text-transform: uppercase; cursor: pointer; max-width: 251px; margin-top: 55px; border-radius: 8px; margin-bottom: 50px;}
 .career-detail img { display: inline-block; font-size: initial; vertical-align: middle; margin-left: 8px; color: #fff;}
-
 /* career details end  */
+
+/* thankyou start */
+.thankbox-main{ padding: 70px 0 0 0;}
+.thankumain{ background: #F2F2F3; padding: 50px 0 100px 0;}
+.thank-container{max-width: 634px;width: 100%;margin: 0 auto; text-align: center; background: #FFFFFF;box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.05);
+  border-radius: 8px;}
+.thank-container .tnk-box{background-image: url('../img/thnk-bg.png');  background-attachment: scroll;background-repeat: no-repeat; background-position: center ; background-size:auto;overflow: hidden;}
+.cr-group{border: 18px solid rgba(0, 124, 0, .1);  border-radius: 50%; width: 145px; height: 145px; padding: 0; background: rgba(0, 124, 0, .1); margin: 0 auto;display: block;}
+.thank-container .tnk-box .green-curcule{background-color: #007C00;padding: 26px; border-radius: 50%;  width: 108px; height: 108px;  margin: 0 auto;}
+.green-curcule img{display: block;margin: 0 auto; bottom: 0;}
+.tnk-txt{padding: 0 0 70px 0; }
+.thank-container .tnk-txt h2{font-style: normal;font-weight: 600;font-size: 32px;line-height:42px;text-align:center;letter-spacing: -0.03em;color: #202025;}
+.thank-container .tnk-txt p{max-width: 380px;font-weight: 400;font-size: 16px;line-height: 20px;text-align: center;letter-spacing: -0.03em;color: #6E6E77;margin: 0 auto;}
+.thank-container .back-home{ padding: 0 0 48px 0;}
+.thank-container .back-home .browse { font-size: 16px; color: #007BB6;text-transform: uppercase; display: block;font-weight: 600;margin: 0 auto;}
+.thank-container .back-home .browse img { display: inline-block; font-size: initial; vertical-align: middle; margin-right: 8px;}
+/* thankyou end */
 
 
 /*Medai query*/
@@ -338,9 +354,10 @@ li { margin: 0; padding: 0;}
 .top-sec {padding: 0 22px;}
 .surveybox {padding: 0px 0;}
 .survey {margin-bottom: 20px;}
-
+.thank-container .tnk-txt h2 { font-size: 24px;line-height: 32px; }
+.tnk-txt {padding: 0 0 50px 0;}
+.thank-container .back-home { padding: 0 0 66px 0;}
 /* career details start */
-
 .career-detail .job-detail .browse {
   margin-top: 90px;
 }
@@ -363,6 +380,8 @@ li { margin: 0; padding: 0;}
 {.first-part .Fbcreator {font-size: 32px;line-height: 41px;text-align: center;}
 .thindustry .industry .industry-first .indbtmtxt { font-size: 14px;}
 .thindustry .btm-img { top: 245px;}
+.thank-container .tnk-txt p { max-width: 285px;}
+.thank-container .tnk-txt h2 {padding: 20px 0; max-width: 282px; font-size: 24px;line-height: 32px;    margin: 0 auto;}
 }
 @media screen and (max-width: 451px){
 .thindustry .btm-img {top: 248px;}
@@ -370,7 +389,9 @@ li { margin: 0; padding: 0;}
 @media screen and (max-width: 429px){
 	.thindustry .btm-img {top: 270px;}
 	}
-
+  @media screen and (max-width: 375px){
+ 
+}
 @media screen and (max-width: 360px){
 	.thindustry .btm-img {top: 284px;}
 }
