--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
 *{
 	box-sizing: border-box;
 }
-.container{
+.maincnt{
 	max-width: 1280px;
 	width: 100%;
 	margin: 0 auto;
@@ -78,7 +78,7 @@ img{max-width: 100%;height: auto;border: 0;}
 .allcategories .cate-box:before{width:0;height: 100%;background: #f15a22;transition: all ease-in 600ms;content: "";position: absolute;left: 0;top: 0;border-radius: 8px;z-index: -1;}
 
 .allcategories .cate-box:hover:before, .allcategories .cate-box.active::before{width: 100%;}
-.thindustry{ background-color: #111111; padding: 40px 0;}
+.thindustry{ background: #111111; padding: 40px 0;}
 .thindustry .industry{text-align: left;    text-align: left;padding: 20px 0;}
 .thindustry .industry .industry-first .dbl-qt{display: block;  text-align: left;}
 .thindustry .industry .industry-first span{display: block;font-weight: 500;font-size: 16px;line-height: 100%;letter-spacing: 0.1em;text-transform:uppercase;color: #FFFFFF;  margin-bottom: 20px;}
@@ -88,6 +88,7 @@ img{max-width: 100%;height: auto;border: 0;}
 .thindustry .industry .industry-second{display: block;}
 .thindustry .industry .industry-second .first-img{margin-left: 20px;}
 .thindustry .btm-img{display: block; text-align: left;}
+.di-flex .fs{flex-wrap: nowrap;}
 
 .vieo-sec{padding: 40px 0 0 0;background: linear-gradient(80deg, rgba(0, 0, 0, 0) 0%, #000000 18.82%);}
 /* use for popup */
