--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ img{max-width: 100%;height: auto;border: 0;}
 .allcategories .cate-box:before{width:0;height: 100%;background: #f15a22;transition: all ease-in 600ms;content: "";position: absolute;left: 0;top: 0;border-radius: 8px;z-index: -1;}
 
 .allcategories .cate-box:hover:before, .allcategories .cate-box.active::before{width: 100%;}
-.thindustry{ background: #111111; padding: 40px 0;}
+.thindustry{ background-color: #111111; padding: 40px 0;}
 .thindustry .industry{text-align: left;    text-align: left;padding: 20px 0;}
 .thindustry .industry .industry-first .dbl-qt{display: block;  text-align: left;}
 .thindustry .industry .industry-first span{display: block;font-weight: 500;font-size: 16px;line-height: 100%;letter-spacing: 0.1em;text-transform:uppercase;color: #FFFFFF;  margin-bottom: 20px;}
@@ -254,6 +254,23 @@ li { margin: 0; padding: 0;}
 .thank-container .back-home .browse { font-size: 16px; color: #007BB6;text-transform: uppercase; display: block;font-weight: 600;margin: 0 auto;}
 .thank-container .back-home .browse img { display: inline-block; font-size: initial; vertical-align: middle; margin-right: 8px;}
 /* thankyou end */
+/* Start your journey with us start */
+.journey{padding: 20px 0;}
+.journey .browse { font-size: 16px; color: #007BB6; margin-top: 20px; margin-bottom: 10px; text-transform: uppercase; display: block;}
+.journey .browse img { display: inline-block; font-size: initial; vertical-align: middle; margin-right: 8px;}
+.journey-form{max-width: 1190px; margin: 0 auto; box-sizing: border-box;}
+.journey-form .jny-txt{font-weight: 600;font-size: 32px;line-height: 44px;letter-spacing: -0.01em;color: #202025; margin-bottom: 5px;}
+.journey-form .sub-txt{font-style: normal;font-weight: 500;font-size: 16px;line-height: 140%;letter-spacing: -0.01em;color: #888891; margin: 0 auto; margin-bottom: 40px;}
+.journey-form .form{padding: 50px; background: #FFFFFF;box-shadow: 0px 4px 44px rgba(32, 32, 37, 0.08);border-radius: 0px 0px 8px 8px;}
+.journey-form .form input{max-width: 525px;width: 100%; height: auto;font-weight: 400;font-size: 16px;line-height: 100%; letter-spacing: -0.01em; color: #888891; padding: 24px; border: 1px solid #BDBDC2;border-radius: 8px; }
+.journey-form .form ul li{padding: 14px 0 5px 0 ;}
+.journey-form .form select{max-width: 525px;width: 100%; height: auto;font-weight: 400;font-size: 16px;line-height: 100%; letter-spacing: -0.01em; color: #888891; padding: 24px; border: 1px solid #BDBDC2;border-radius: 8px; }
+.journey-form .form .valdi-txt{margin: 0 auto;color: red;font-size: 14px;}
+.journey-form .form li label{font-weight: 500;font-size: 16px;line-height: 140%;letter-spacing: -0.01em;color: #202025;}
+.journey-btn{padding: 24px;gap: 8px;max-width: 524px;width: 100%;height: 64px;background: #034EA2;border-radius: 8px;border: 0;font-weight: 600;font-size: 16px;line-height: 100%;letter-spacing: 0.06em;text-transform: uppercase;color: #FFFFFF;margin-top: 20px;}
+
+/* Start your journey with us end */
+
 /* Job Listing CSS Start here */
 #career {
   background: #f8f8f8;
@@ -359,12 +376,14 @@ h1 {
 
 /*Medai query*/
 @media screen and (max-width: 1298px) {
-	.container{max-width: 100%;padding: 0 20px;}
+	.maincnt{max-width: 100%;padding: 0 20px;}
+  .journey-form .form ul li {padding: 14px 0 5px 16px;}
+  .journey-form .form li label {font-size: 14px;}
 }
 /* @media screen and (max-width: 1200px) {.container{max-width: 100%;padding: 0 20px ;}
 } */
 @media screen and (max-width: 991px) {
-	.container{max-width: 100%;padding: 0 20px;}
+	.maincnt{max-width: 100%;padding: 0 20px;}
 	.first-part .Fbcreator {font-size: 40px; line-height: 45px;}
 	.first-part .watch-txt {font-size: 18px;margin-bottom: 90px;}
 	.thumbTxt .thumbsmltxt {font-size: 16px;}
@@ -373,7 +392,9 @@ h1 {
 	.thindustry .industry .industry-first .indtxt {font-size: 24px;line-height: 32px;}
 	.thindustry .industry .industry-first .indbtmtxt {font-size: 16px;line-height: 16px;margin-bottom: 80px;}
 	.slider .thumbnail .sub-txt {padding: 4px;margin: 0 auto;font-size: 12px;top: 3px;right: 4px;}
- 
+  .journey-form .form ul li {
+    padding: 14px 0 5px 16px;
+}
 }
 
 @media screen and (max-width: 907px){
@@ -391,9 +412,11 @@ h1 {
    .web-category .Categories { padding: 10px 0 0 0;margin-bottom: 60px;overflow-x: auto;}
   .w-33 {width: 100%;}
   .popup-content {padding: 7px;width: 88%;margin-top: 40px;margin-top: -180px; top: 50%;}
+  .w-50 {width: 100%;}
 
 }
 @media screen and (max-width: 768px){
+  .w-50 {width: 100%;}
 	.thumbTxt .thumbsmltxt {font-size: 12px;}
 	.allcategories .cate-box {padding: 12px 32px;min-height: 36px;margin-bottom: 12px;margin-right: 12px;}
 	/* .second-part {border-left: 1px solid rgb(217 217 217 / 80%);} */
@@ -467,9 +490,11 @@ h1 {
   padding: 20px 0 0 0;
 }
 /* career details end */
-
-
-
+.journey-form .form li label {font-size: 16px;}
+.journey-form .form ul li {
+  padding: 14px 0 5px 0;
+}
+.journey-form .form {padding: 16px;}
 
 }
 
