--- a/css/style.css
+++ b/css/style.css
@@ -263,20 +263,33 @@ h1 {
   margin: 0;
   padding: 30px 0;
 }
-
-#joblist {
-  color: #fff;
+.joblistitem{
   border-top: 1px solid #888891;
   border-bottom: 1px solid #888891;
   padding: 10px 0;
+  position: relative;
+  
+
+}
+
+#joblist {
+  color: #fff;
   list-style-type: none;
-  display: flex;
+  display:inline-flex;
+  width: 80%;
+  overflow-x: auto;
+  /* overflow-y: hidden; */
+  height: 40px;
+  -webkit-overflow-scrolling: touch;
+  
 }
 
 #joblist li {
   color: #888891;
   padding: 0 30px 0 0;
-  display: block;
+  display:inline-block;
+  width: auto;
+  white-space:nowrap; 
 }
 
 #joblist li.act {
@@ -347,8 +360,116 @@ h1 {
   #joblist li.hidden{display: none;}
 
 
+.scroll-style::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+  border-radius: 5px;
+}
+.scroll-style::-webkit-scrollbar
+{
+	background-color: #F5F5F5;
+  width: 5px;
+  height: 5px;
+}
 
+.scroll-style::-webkit-scrollbar-thumb
+{
+	background-color: #a5a5a5;
+}
+#nextBtn{width: 40px;height: 40px;line-height: 40px;border-radius: 50%;position: absolute;right: 20%;margin-right: -50px;cursor: pointer;top: 10px;}
+.arrow {
+  margin: 0 0 0 10px;
+  display: inline-block;
+  height: 12px;
+  position: relative;
+  width: 12px;
+}
+.arrow::after {
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-right-style: solid;
+  border-right-width: 2px;
+  content: "";
+  display: inline-block;
+  height: 12px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 12px;
+}
+.arrow.is-left {
+  -moz-transform: rotate(315deg);
+  -ms-transform: rotate(315deg);
+  -webkit-transform: rotate(315deg);
+  transform: rotate(315deg);
+}
+.arrow::after {
+  border-color: #000;
+}
+.arrow::before {
+  background-color: #000;
+}  
 
+.search-container {
+  position: relative;
+  display: inline-flex;
+  /* margin: 4px 2px; */
+  height: 44px;
+  width: 16%;
+  vertical-align: bottom;
+  align-items: flex-start;
+  justify-content: flex-end;
+}
+
+.mglass {
+	display: inline-block;
+	width: 30px;
+  height: 30px;
+  /* pointer-events: none;
+	-webkit-transform: rotate(-45deg);
+	-moz-transform: rotate(-45deg);
+	-o-transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg); */
+}
+
+.searchbutton {
+	position: absolute;
+	font-size: 22px;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+.search:focus + .searchbutton {
+	transition-duration: 0.4s;
+	-moz-transition-duration: 0.4s;
+	-webkit-transition-duration: 0.4s;
+	-o-transition-duration: 0.4s;
+	background-color: white;
+	color: black;
+}
+
+.search {
+	position: absolute;
+	left: 49px; /* Button width-1px (Not 50px/100% because that will sometimes show a 1px line between the search box and button) */
+	background-color: white;
+	outline: none;
+	border: none;
+	padding: 0;
+	width: 0;
+	height: 100%;
+	z-index: 10;
+	transition-duration: 0.4s;
+	-moz-transition-duration: 0.4s;
+	-webkit-transition-duration: 0.4s;
+	-o-transition-duration: 0.4s;
+}
+
+.search:focus {
+	width: 363px; /* Bar width+1px */
+	padding: 0 16px 0 0;
+}
 
 
 
