--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,7 @@ h1 {
 {
 	background-color: #a5a5a5;
 }
-#nextBtn{width: 40px;height: 40px;line-height: 40px;border-radius: 50%;position: absolute;right: 20%;margin-right: -50px;cursor: pointer;top: 10px;}
+#nextBtn{width: 40px;height: 40px;line-height: 40px;border-radius: 50%;position: absolute;right: 20%;margin-right: -50px;cursor: pointer;top: 10px;z-index: 555;}
 .arrow {
   margin: 0 0 0 10px;
   display: inline-block;
