--- a/css/style.css
+++ b/css/style.css
@@ -281,38 +281,57 @@ h1 {
   margin: 0;
   padding: 30px 0;
 }
+.ltSec{ width:80%;overflow: hidden;}
+.rtSec{ width:20%;}
+.carouselbg{ width: 100%;}
 .joblistitem{
   border-top: 1px solid #888891;
   border-bottom: 1px solid #888891;
-  padding: 10px 0;
-  position: relative;
-  
+  padding: 10px 0;position: relative; 
+  display: flex; 
 
 }
-
 #joblist {
   color: #fff;
   list-style-type: none;
   display:inline-flex;
-  width: 80%;
-  overflow-x: auto;
+  width: 100%;
+  /* overflow-x: auto;
   /* overflow-y: hidden; */
   height: 40px;
   -webkit-overflow-scrolling: touch;
+  align-items: center;
   
 }
 
 #joblist li {
   color: #888891;
-  padding: 0 30px 0 0;
+  margin: 0 30px 0 0;
+  /* padding: 0 30px 0 0; */
   display:inline-block;
-  width: auto;
-  white-space:nowrap; 
+  width: 100%;
+  white-space:nowrap;
+  position: relative;
 }
 
-#joblist li.act {
+/* #joblist li.act {
   color: #000;
   border-bottom: 2px solid #f15a22;
+} */
+#joblist li:after {
+  content: "";
+  width:0;
+  /* border-bottom: 2px solid #f15a22; */
+  height: 2px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transition: all ease-in 600ms;
+}
+#joblist li.act:after {
+  width: 100%;
+  background: #f15a22;
+  transition: all ease-in 600ms;
 }
 #jobcard dl {
   box-sizing: border-box;
@@ -395,7 +414,9 @@ h1 {
 {
 	background-color: #a5a5a5;
 }
-#nextBtn{width: 40px;height: 40px;line-height: 40px;border-radius: 50%;position: absolute;right: 20%;margin-right: -50px;cursor: pointer;top: 10px;z-index: 555;}
+
+#nextBtn{width: 40px;height: 100%;line-height: 40px;position: absolute;right: 20%;margin-right: -50px;cursor: pointer;top: 0;z-index: 555;background: #fff;}
+#prevBtn{width: 40px;height: 100%;line-height: 40px;position: absolute;left:0;margin-right: -50px;cursor: pointer;top: 0;z-index: 555;background: #fff;}
 .arrow {
   margin: 0 0 0 10px;
   display: inline-block;
@@ -411,9 +432,9 @@ h1 {
   content: "";
   display: inline-block;
   height: 12px;
-  left: 0;
+  left: -8px;
   position: absolute;
-  top: 0;
+  top: 6px;
   width: 12px;
 }
 .arrow.is-left {
@@ -422,6 +443,13 @@ h1 {
   -webkit-transform: rotate(315deg);
   transform: rotate(315deg);
 }
+.arrow.is-right {
+  -moz-transform: rotate(140deg);
+  -ms-transform: rotate(140deg);
+  -webkit-transform: rotate(140deg);
+  transform: rotate(140deg);
+}
+.arrow.is-right::after{top:-13px;left: 2px;}
 .arrow::after {
   border-color: #000;
 }
@@ -434,7 +462,7 @@ h1 {
   display: inline-flex;
   /* margin: 4px 2px; */
   height: 44px;
-  width: 16%;
+  width: 100%;
   vertical-align: bottom;
   align-items: flex-start;
   justify-content: flex-end;
@@ -444,6 +472,7 @@ h1 {
 	display: inline-block;
 	width: 30px;
   height: 30px;
+  padding-top: 6px;
   /* pointer-events: none;
 	-webkit-transform: rotate(-45deg);
 	-moz-transform: rotate(-45deg);
@@ -452,7 +481,7 @@ h1 {
 }
 
 .searchbutton {
-	position: absolute;
+	/* position: absolute; */
 	font-size: 22px;
 	width: 100%;
 	margin: 0;
@@ -470,7 +499,7 @@ h1 {
 
 .search {
 	position: absolute;
-	left: 49px; /* Button width-1px (Not 50px/100% because that will sometimes show a 1px line between the search box and button) */
+	right:30px; /* Button width-1px (Not 50px/100% because that will sometimes show a 1px line between the search box and button) */
 	background-color: white;
 	outline: none;
 	border: none;
@@ -485,8 +514,9 @@ h1 {
 }
 
 .search:focus {
-	width: 363px; /* Bar width+1px */
-	padding: 0 16px 0 0;
+	width: 169px;
+    padding: 0 16px 0 0;
+    text-indent: 10px;
 }
 
 
