--- a/css/style.css
+++ b/css/style.css
@@ -283,11 +283,12 @@ h1 {
 }
 .ltSec{ width:80%;overflow: hidden;}
 .rtSec{ width:20%;}
-.carouselbg{ width: 100%;}
+.carouselbg{ width: 100%;padding: 15px 0;}
 .joblistitem{
   border-top: 1px solid #888891;
   border-bottom: 1px solid #888891;
-  padding: 10px 0;position: relative; 
+  /* padding: 10px 0; */
+  position: relative; 
   display: flex; 
 
 }
@@ -298,7 +299,7 @@ h1 {
   width: 100%;
   /* overflow-x: auto;
   /* overflow-y: hidden; */
-  height: 40px;
+  /* height: 40px; */
   -webkit-overflow-scrolling: touch;
   align-items: center;
   
@@ -324,14 +325,14 @@ h1 {
   /* border-bottom: 2px solid #f15a22; */
   height: 2px;
   position: absolute;
-  bottom: 0;
+  bottom: -15px;
   left: 0;
-  transition: all ease-in 600ms;
+  transition: all ease-in 300ms;
 }
 #joblist li.act:after {
   width: 100%;
   background: #f15a22;
-  transition: all ease-in 600ms;
+  transition: all ease-in 300ms;
 }
 #jobcard dl {
   box-sizing: border-box;
@@ -432,9 +433,9 @@ h1 {
   content: "";
   display: inline-block;
   height: 12px;
-  left: -8px;
+  left: -7px;
   position: absolute;
-  top: 6px;
+  top: 2px;
   width: 12px;
 }
 .arrow.is-left {
@@ -449,7 +450,7 @@ h1 {
   -webkit-transform: rotate(140deg);
   transform: rotate(140deg);
 }
-.arrow.is-right::after{top:-13px;left: 2px;}
+.arrow.is-right::after{top:-14px;left: -2px;}
 .arrow::after {
   border-color: #000;
 }
@@ -460,7 +461,7 @@ h1 {
 .search-container {
   position: relative;
   display: inline-flex;
-  /* margin: 4px 2px; */
+  margin: 4px 2px;
   height: 44px;
   width: 100%;
   vertical-align: bottom;
@@ -470,8 +471,8 @@ h1 {
 
 .mglass {
 	display: inline-block;
-	width: 30px;
-  height: 30px;
+	width: 20px;
+  height: 20px;
   padding-top: 6px;
   /* pointer-events: none;
 	-webkit-transform: rotate(-45deg);
