--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ li { margin: 0; padding: 0;}
 /* Start your journey with us end */
 
 /* Creative_portfolio start */
-.featurcmp {margin-bottom: 36px;}
+.featurcmp {margin-bottom: 3x6px;}
 .creptfo{background-color: #fbfbfb;}
 .creptfo h1{font-weight: 700;font-size: 48px;line-height: 62px;letter-spacing: -0.01em; color: #202025;}
 .creative-box{margin-right:-20px; box-sizing: border-box;align-items: flex-start;}
