--- a/css/style.css
+++ b/css/style.css
@@ -276,11 +276,12 @@ li { margin: 0; padding: 0;}
 .featurcmp {margin-bottom: 36px;}
 .creptfo{background-color: #fbfbfb;}
 .creptfo h1{font-weight: 700;font-size: 48px;line-height: 62px;letter-spacing: -0.01em; color: #202025;}
-.creative-box{margin-right:-20px; box-sizing: border-box;align-items: flex-start;}
+.creative-box{ box-sizing: border-box;align-items: flex-start;}
+.creative{padding-right: 10px;}
 .creative-box img{ border-radius: 8px; }
 .featurcmp .creative{position: relative; }
 .upbox{position: absolute;top: 25px;right: 40px;background: #FFFFFF;border-radius: 8px;max-width: 170px; height: auto;padding: 8px;}
-.featurcmp .crdmo{position: relative; }
+.featurcmp .crdmo{position: relative;padding-left: 10px; }
 .creative-box .creative-txt{min-height: 84px;font-weight: 700;font-size: 32px; line-height: 42px;letter-spacing: -0.01em;color: #202025; margin: 0 auto;margin-top: 18px;}
 .cre-smbox .e-com {margin-right: 26px;}
 .cre-smbox .e-com p{font-weight: 500;font-size: 16px;line-height: 22px;color: #888891;}
@@ -291,7 +292,7 @@ li { margin: 0; padding: 0;}
 .new-audiance .audiance-txt{font-weight: 700;font-size: 32px;line-height: 42px;letter-spacing: -0.01em;color: #202025; margin: 0 auto; margin-top: 24px; margin-bottom: 14px;}
 .calu {margin-bottom: 70px;}
 .new-audiance .audiance-smt{font-weight: 500;font-size: 16px;line-height: 22px;color: #888891; margin: 0 auto;}
-.new-audiance .txt-box{max-width: 410px;width: 100%;min-height: 268px;background: #F2F2F3;opacity: 0.7;border-radius: 8px;padding: 72px 104px 72px 42px; margin-right: 14px;    margin-bottom: 14px; }
+.new-audiance .txt-box{max-width: 410px;width: 100%;min-height: 268px;background: #F2F2F3; border-radius: 8px;padding: 72px 104px 72px 42px; margin-right: 14px;    margin-bottom: 14px; }
 .new-audiance .txt-box .hed{font-weight: 700;font-size: 72px;line-height: 91px;letter-spacing: -0.01em;color: #034EA2;margin: 0 auto;}
 .new-audiance .txt-box .sub-txt{font-weight: 400;font-size: 22px;line-height: 120%;letter-spacing: -0.01em;color: #202025;margin: 0 auto;min-height: 58px;}
 .social-mediacrea{margin-bottom: 60px;}
@@ -304,8 +305,6 @@ li { margin: 0; padding: 0;}
 .short-films h2{font-weight: 700;font-size: 32px;line-height: 130%;letter-spacing: -0.01em;color: #202025;}
 .Workbybrands .work-box{max-width: 307px;width: 100%; min-height: 157px;background: #F2F2F3;  border-radius: 8px;padding: 24px 32px;     margin-right: 10px; margin-bottom: 10px;}
 .work-boximg{ min-height: 72px; margin-bottom: 30px;}
-/* .work-boximg img{min-height: 72px;} */
- /* .new-working-box{margin-bottom: 9px;} */
 .work-box .work-smbox p{margin: 0 auto; font-weight: 500;font-size: 14px;line-height: 120%;letter-spacing: -0.01em;text-transform: uppercase; color: #6E6E77;}
 .work-box .e-com p span {position: relative;top: 0px;right: -2px;}
 .Workbrands{    align-items: inherit;}
@@ -577,9 +576,9 @@ h1 {
 	.maincnt{max-width: 100%;padding: 0 20px;}
   .journey-form .form ul li {padding: 14px 0 5px 16px;}
   .journey-form .form li label {font-size: 14px;}
-  .upbox {
+  /* .upbox {
     right: 2%;
-}
+} */
 }
 /* @media screen and (max-width: 1200px) {.container{max-width: 100%;padding: 0 20px ;}
 } */
@@ -600,7 +599,11 @@ h1 {
   .work-smbox {flex-direction: row;}
   .upbox { right: 29%;}
   .cre-smbox { flex-direction: row;}
- 
+  .upbox {right: 40px;}
+
+}
+@media screen and (max-width: 907px){
+  .upbox { right: 29%;}
 }
 
 @media screen and (max-width: 907px){
@@ -702,7 +705,6 @@ h1 {
 .journey-form .form input { padding: 16px;}
 .journey-form .form select {padding: 16px;}
 
-
 /* Creative_portfolio start */
 .Workbrands {  align-items: center;}
 .socmdcr {    justify-content: center;}
@@ -710,7 +712,12 @@ h1 {
 .work-smbox {flex-direction: row;}
 .short-films h2 {text-align: center;}
 .cre-smbox {flex-direction: row;}
-.upbox {right: 2%;}
+.upbox {right: 8%;}
+.upbox {max-width: 107px;}
+.creptfo h1 {font-size: 24px;line-height: 9px;}
+.new-audiance .upbox { top: 6px;right: 6px;max-width: 87px;padding: 4px 4px;}
+
+
 
 
 /* Creative_portfolio end */
